--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ psutil = "^5.7.0"
 twine = "^3.1.1"
 pytest-sugar = "^0.9.2"
 click = "^8.0"
+freezegun = "^1.2.2"
 
 [tool.black]
 skip-string-normalization = true
