add some docs for c7n-kube

--- a/docs/Makefile.sphinx
+++ b/docs/Makefile.sphinx
@@ -63,6 +63,7 @@ clean:
 	rm -f $(SRCDIR)/gcp/resources/*
 	rm -f $(SRCDIR)/azure/resources/*
 	rm -f $(SRCDIR)/awscc/resources/*
+	rm -f $(SRCDIR)/tools/*.md
 
 html:
 #	$(SPHINXBINS)/sphinx-apidoc -H "AWS" -o $(SRCDIR)/generated/aws $(SRCDIR)/../../c7n $(SRCDIR)/../../tests $(SRCDIR)/../../c7n/ipaddress.py
@@ -84,6 +85,7 @@ html:
 	cp -p tools/c7n_salactus/README.md $(SRCDIR)/tools/c7n-salactus.md
 	cp -p tools/c7n_logexporter/README.md $(SRCDIR)/tools/c7n-logexporter.md
 	cp -p tools/c7n_left/README.md $(SRCDIR)/tools/c7n-left.md
+	cp -p tools/c7n_kube/readme.md $(SRCDIR)/tools/c7n-kube.md
 	mkdir -p $(SRCDIR)/aws/resources
 	c7n-sphinxext --provider aws --output-dir $(SRCDIR)/aws/resources --group-by=resource_type.service
 	mkdir -p $(SRCDIR)/awscc/resources
@@ -94,23 +96,6 @@ html:
 	c7n-sphinxext --provider azure --output-dir $(SRCDIR)/azure/resources --group-by=resource_type.doc_groups
 
 	$(SPHINXBUILD) -j auto -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
-
-#
-# Remove the copies so folks dont accidentally edit the copy
-#	rm $(SRCDIR)/tools/c7n-org.md
-#	rm $(SRCDIR)/tools/c7n-policystream.md
-#	rm $(SRCDIR)/tools/c7n-mailer.md
-#	rm $(SRCDIR)/tools/c7n-trailcreator.md
-#	rm $(SRCDIR)/tools/omnissm.md
-#	rm $(SRCDIR)/tools/c7n-salactus.md
-#	rm $(SRCDIR)/tools/c7n-logexporter.md
-#	rm $(SRCDIR)/tools/c7n-guardian.md
-#	rm $(SRCDIR)/tools/cask.md
-#	rm -R $(SRCDIR)/tools/assets
-#	rm $(SRCDIR)/aws/resources/*rst
-#	rm $(SRCDIR)/azure/resources/*rst
-#	rm $(SRCDIR)/gcp/resources/*rst
-
 
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
