--- a/tools/c7n_tencentcloud/pyproject.toml
+++ b/tools/c7n_tencentcloud/pyproject.toml
@@ -4,6 +4,11 @@ version = "0.1.2"
 description = "Cloud Custodian - Tencent Cloud Provider"
 authors = ["Tencent Cloud"]
 license = "Apache-2.0"
+homepage = "https://cloudcustodian.io"
+documentation = "https://cloudcustodian.io/docs"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"
 
 [tool.poetry.dependencies]
 python = "^3.7"
