--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,4 +14,4 @@ jobs:
           python-version: "3.10"
       - uses: abatilo/actions-poetry@v2
       - run: poetry install
-      - run: mkdocs gh-deploy --dirty
+      - run: poetry run mkdocs gh-deploy --dirty
