--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,10 +8,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10"
       - uses: abatilo/actions-poetry@v2
       - run: poetry install
-      - run: poetry run mkdocs gh-deploy --dirty
+      - run: poetry run mkdocs build -d /tmp/docs
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git checkout gh-pages
+          rsync -az /tmp/docs/* .
+          git add .
+          git commit -m "Deploying to gh-pages from @ $GITHUB_SHA"
+          git push
