--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,78 @@
 argcomplete==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
 attrs==22.1.0 ; python_version >= "3.7" and python_version < "4.0"
-aws-xray-sdk==2.10.0 ; python_version >= "3.7" and python_version < "4.0"
+aws-xray-sdk==2.11.0 ; python_version >= "3.7" and python_version < "4.0"
 bleach==5.0.1 ; python_version >= "3.7" and python_version < "4.0"
-boto3==1.24.88 ; python_version >= "3.7" and python_version < "4.0"
-botocore==1.27.88 ; python_version >= "3.7" and python_version < "4.0"
+boto3==1.26.9 ; python_version >= "3.7" and python_version < "4.0"
+botocore==1.29.9 ; python_version >= "3.7" and python_version < "4.0"
 certifi==2022.9.24 ; python_version >= "3.7" and python_version < "4"
 cffi==1.15.1 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 charset-normalizer==2.1.1 ; python_version >= "3.7" and python_version < "4"
 click==8.1.3 ; python_version >= "3.7" and python_version < "4.0"
-colorama==0.4.5 ; python_version >= "3.7" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.7" and python_version < "4.0"
 coverage==6.5.0 ; python_version >= "3.7" and python_version < "4.0"
 coverage[toml]==6.5.0 ; python_version >= "3.7" and python_version < "4.0"
-cryptography==38.0.1 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
+cryptography==38.0.3 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 docutils==0.17.1 ; python_version >= "3.7" and python_version < "4.0"
+exceptiongroup==1.0.3 ; python_version >= "3.7" and python_version < "3.11"
 execnet==1.9.0 ; python_version >= "3.7" and python_version < "4.0"
 flake8==3.9.2 ; python_version >= "3.7" and python_version < "4.0"
 freezegun==1.2.2 ; python_version >= "3.7" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.7" and python_version < "4.0"
 importlib-metadata==4.13.0 ; python_version >= "3.7" and python_version < "4.0"
-importlib-resources==5.9.0 ; python_version >= "3.7" and python_version < "3.9"
+importlib-resources==5.10.0 ; python_version >= "3.7" and python_version < "3.9"
 iniconfig==1.1.1 ; python_version >= "3.7" and python_version < "4.0"
 jaraco-classes==3.2.3 ; python_version >= "3.7" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 jmespath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
 jsonpatch==1.32 ; python_version >= "3.7" and python_version < "4.0"
 jsonpointer==2.3 ; python_version >= "3.7" and python_version < "4.0"
-jsonschema==4.16.0 ; python_version >= "3.7" and python_version < "4.0"
-keyring==23.9.3 ; python_version >= "3.7" and python_version < "4.0"
+jsonschema==4.17.0 ; python_version >= "3.7" and python_version < "4.0"
+keyring==23.11.0 ; python_version >= "3.7" and python_version < "4.0"
 mccabe==0.6.1 ; python_version >= "3.7" and python_version < "4.0"
 mock==4.0.3 ; python_version >= "3.7" and python_version < "4.0"
-more-itertools==8.14.0 ; python_version >= "3.7" and python_version < "4.0"
+more-itertools==9.0.0 ; python_version >= "3.7" and python_version < "4.0"
 multidict==6.0.2 ; python_version >= "3.7" and python_version < "4.0"
 packaging==21.3 ; python_version >= "3.7" and python_version < "4.0"
 pkginfo==1.8.3 ; python_version >= "3.7" and python_version < "4.0"
 pkgutil-resolve-name==1.3.10 ; python_version >= "3.7" and python_version < "3.9"
 placebo==0.9.0 ; python_version >= "3.7" and python_version < "4.0"
 pluggy==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
-portalocker==2.5.1 ; python_version >= "3.7" and python_version < "4.0"
-psutil==5.9.2 ; python_version >= "3.7" and python_version < "4.0"
+portalocker==2.6.0 ; python_version >= "3.7" and python_version < "4.0"
+psutil==5.9.4 ; python_version >= "3.7" and python_version < "4.0"
 py==1.11.0 ; python_version >= "3.7" and python_version < "4.0"
 pycodestyle==2.7.0 ; python_version >= "3.7" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 pyflakes==2.3.1 ; python_version >= "3.7" and python_version < "4.0"
 pygments==2.13.0 ; python_version >= "3.7" and python_version < "4.0"
 pyparsing==3.0.9 ; python_version >= "3.7" and python_version < "4.0"
-pyrsistent==0.18.1 ; python_version >= "3.7" and python_version < "4.0"
+pyrsistent==0.19.2 ; python_version >= "3.7" and python_version < "4.0"
 pytest-cov==3.0.0 ; python_version >= "3.7" and python_version < "4.0"
 pytest-forked==1.4.0 ; python_version >= "3.7" and python_version < "4.0"
 pytest-recording==0.12.1 ; python_version >= "3.7" and python_version < "4.0"
-pytest-sugar==0.9.5 ; python_version >= "3.7" and python_version < "4.0"
+pytest-sugar==0.9.6 ; python_version >= "3.7" and python_version < "4.0"
 pytest-terraform==0.6.4 ; python_version >= "3.7" and python_version < "4.0"
 pytest-xdist==2.5.0 ; python_version >= "3.7" and python_version < "4.0"
-pytest==7.1.3 ; python_version >= "3.7" and python_version < "4.0"
+pytest==7.2.0 ; python_version >= "3.7" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.7" and python_version < "4.0"
 pywin32-ctypes==0.2.0 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "win32"
-pywin32==304 ; python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
+pywin32==305 ; python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
 pyyaml==6.0 ; python_version >= "3.7" and python_version < "4.0"
-readme-renderer==37.2 ; python_version >= "3.7" and python_version < "4.0"
-requests-toolbelt==0.9.1 ; python_version >= "3.7" and python_version < "4.0"
+readme-renderer==37.3 ; python_version >= "3.7" and python_version < "4.0"
+requests-toolbelt==0.10.1 ; python_version >= "3.7" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.7" and python_version < "4"
 rfc3986==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
 s3transfer==0.6.0 ; python_version >= "3.7" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 six==1.16.0 ; python_version >= "3.7" and python_version < "4.0"
 tabulate==0.8.10 ; python_version >= "3.7" and python_version < "4.0"
-termcolor==2.0.1 ; python_version >= "3.7" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.7" and python_version < "4.0"
+termcolor==2.1.0 ; python_version >= "3.7" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.7" and python_full_version <= "3.11.0a6"
 tqdm==4.64.1 ; python_version >= "3.7" and python_version < "4.0"
 twine==3.8.0 ; python_version >= "3.7" and python_version < "4.0"
-typing-extensions==4.3.0 ; python_version >= "3.7" and python_version < "3.8"
+typing-extensions==4.4.0 ; python_version >= "3.7" and python_version < "3.8"
 urllib3==1.26.12 ; python_version >= "3.7" and python_version < "4"
 vcrpy==4.2.1 ; python_version >= "3.7" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.7" and python_version < "4.0"
 wrapt==1.14.1 ; python_version >= "3.7" and python_version < "4.0"
 yarl==1.8.1 ; python_version >= "3.7" and python_version < "4.0"
-zipp==3.8.1 ; python_version >= "3.7" and python_version < "4.0"
+zipp==3.10.0 ; python_version >= "3.7" and python_version < "4.0"
