--- a/tools/c7n_azure/requirements.txt
+++ b/tools/c7n_azure/requirements.txt
@@ -1,14 +1,14 @@
 adal==1.2.7 ; python_version >= "3.7" and python_version < "4.0"
 applicationinsights==0.11.10 ; python_version >= "3.7" and python_version < "4.0"
-apscheduler==3.9.1 ; python_version >= "3.7" and python_version < "4"
+apscheduler==3.9.1.post1 ; python_version >= "3.7" and python_version < "4"
 azure-common==1.1.28 ; python_version >= "3.7" and python_version < "4.0"
-azure-core==1.26.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-core==1.26.1 ; python_version >= "3.7" and python_version < "4.0"
 azure-cosmos==3.2.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-cosmosdb-nspkg==2.0.2 ; python_version >= "3.7" and python_version < "4.0"
 azure-cosmosdb-table==1.0.6 ; python_version >= "3.7" and python_version < "4.0"
-azure-functions==1.11.2 ; python_version >= "3.7" and python_version < "4"
+azure-functions==1.12.0 ; python_version >= "3.7" and python_version < "4"
 azure-graphrbac==0.61.1 ; python_version >= "3.7" and python_version < "4.0"
-azure-identity==1.11.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-identity==1.12.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-keyvault-certificates==4.6.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-keyvault-keys==4.7.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-keyvault-secrets==4.6.0 ; python_version >= "3.7" and python_version < "4.0"
@@ -56,44 +56,43 @@ azure-mgmt-subscription==1.0.0 ; python_version >= "3.7" and python_version < "4
 azure-mgmt-trafficmanager==0.51.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-web==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-nspkg==3.0.2 ; python_version >= "3.7" and python_version < "4.0"
-azure-storage-blob==12.13.1 ; python_version >= "3.7" and python_version < "4.0"
+azure-storage-blob==12.14.1 ; python_version >= "3.7" and python_version < "4.0"
 azure-storage-common==2.1.0 ; python_version >= "3.7" and python_version < "4.0"
-azure-storage-file-share==12.9.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-storage-file-share==12.10.1 ; python_version >= "3.7" and python_version < "4.0"
 azure-storage-file==2.1.0 ; python_version >= "3.7" and python_version < "4.0"
-azure-storage-queue==12.4.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-storage-queue==12.5.0 ; python_version >= "3.7" and python_version < "4.0"
 backports-zoneinfo==0.2.1 ; python_version >= "3.7" and python_version < "3.9"
 certifi==2022.9.24 ; python_version >= "3.7" and python_version < "4"
 cffi==1.15.1 ; python_version >= "3.7" and python_version < "4.0"
 charset-normalizer==2.1.1 ; python_version >= "3.7" and python_version < "4"
 click==8.1.3 ; python_version >= "3.7" and python_version < "4.0"
-colorama==0.4.5 ; python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
-cryptography==38.0.1 ; python_version >= "3.7" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
+cryptography==38.0.3 ; python_version >= "3.7" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.7" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.7" and python_version < "4"
 importlib-metadata==4.13.0 ; python_version >= "3.7" and python_version < "3.8"
 isodate==0.6.1 ; python_version >= "3.7" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
 msal-extensions==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
-msal==1.19.0 ; python_version >= "3.7" and python_version < "4.0"
+msal==1.20.0 ; python_version >= "3.7" and python_version < "4.0"
 msrest==0.7.1 ; python_version >= "3.7" and python_version < "4.0"
 msrestazure==0.6.4 ; python_version >= "3.7" and python_version < "4.0"
 netaddr==0.7.20 ; python_version >= "3.7" and python_version < "4.0"
-oauthlib==3.2.1 ; python_version >= "3.7" and python_version < "4.0"
-portalocker==2.5.1 ; python_version >= "3.7" and python_version < "4.0"
+oauthlib==3.2.2 ; python_version >= "3.7" and python_version < "4.0"
+portalocker==2.6.0 ; python_version >= "3.7" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0"
-pyjwt==2.5.0 ; python_version >= "3.7" and python_version < "4.0"
-pyjwt[crypto]==2.5.0 ; python_version >= "3.7" and python_version < "4.0"
+pyjwt==2.6.0 ; python_version >= "3.7" and python_version < "4.0"
+pyjwt[crypto]==2.6.0 ; python_version >= "3.7" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.7" and python_version < "4.0"
 pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.7" and python_version < "4"
-pytz==2022.4 ; python_version >= "3.7" and python_version < "4"
-pywin32==304 ; python_version >= "3.7" and platform_system == "Windows" and python_version < "4.0"
+pytz==2022.6 ; python_version >= "3.7" and python_version < "4"
+pywin32==305 ; python_version >= "3.7" and platform_system == "Windows" and python_version < "4.0"
 requests-oauthlib==1.3.1 ; python_version >= "3.7" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.7" and python_version < "4"
-setuptools==65.4.1 ; python_version >= "3.7" and python_version < "4"
+setuptools==65.5.1 ; python_version >= "3.7" and python_version < "4"
 six==1.16.0 ; python_version >= "3.7" and python_version < "4"
-types-cryptography==3.3.23 ; python_version >= "3.7" and python_version < "4.0"
-typing-extensions==4.3.0 ; python_version >= "3.7" and python_version < "4.0"
-tzdata==2022.4 ; python_version >= "3.7" and python_version < "4"
+typing-extensions==4.4.0 ; python_version >= "3.7" and python_version < "4.0"
+tzdata==2022.6 ; python_version >= "3.7" and python_version < "4"
 tzlocal==4.2 ; python_version >= "3.7" and python_version < "4"
 urllib3==1.26.12 ; python_version >= "3.7" and python_version < "4"
-zipp==3.8.1 ; python_version >= "3.7" and python_version < "3.8"
+zipp==3.10.0 ; python_version >= "3.7" and python_version < "3.8"
