--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,7 @@ extra_css:
 extra:
   analytics:
     provider: google
-    property: !ENV GOOGLE_ANALYTICS_KEY
+    property: UA-162730326-1 
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/cloud-custodian
