--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ exclude = setup.py,.git,venv,python2.7,bin,docs,__init__.py,.tox,tools/c7n_azure
 ; E231 is missing whitespace after  ,/:
 ; E251 is unexpected spaces around keywords
 ; E275 is missing whitespace after keyword
-; ignore = E401,E128,E203,E221,E251
+; ignore = E401,E128,E203,E221,E251,F723
 ignore = E128,E401,W503,W504,E741,E275
 max-line-length = 100
 
