--- a/tools/c7n_gcp/pyproject.toml
+++ b/tools/c7n_gcp/pyproject.toml
@@ -20,9 +20,9 @@ retrying = "^1.3.3"
 google-api-python-client = "^2.0"
 google-cloud-logging = "^3.2"
 google-auth = "^2.1.0"
-ratelimiter = "^1.2.0"
 google-cloud-monitoring = "^2.5.0"
 google-cloud-storage = "^1.42.2"
+pyrate-limiter = "^2.8.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
