--- a/tools/c7n_tencentcloud/requirements.txt
+++ b/tools/c7n_tencentcloud/requirements.txt
@@ -1,13 +1,13 @@
-certifi==2022.9.24; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
-cos-python-sdk-v5==1.9.21
-crcmod==1.7
-idna==3.4; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-pycryptodome==3.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pytz==2022.6
-requests==2.27.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-retrying==1.3.3
-six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
-tencentcloud-sdk-python==3.0.783
-urllib3==1.26.12; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-xmltodict==0.13.0; python_version >= "3.4"
+certifi==2022.12.7 ; python_version >= "3.7" and python_version < "4.0"
+charset-normalizer==2.0.12 ; python_version >= "3.7" and python_version < "4.0"
+cos-python-sdk-v5==1.9.21 ; python_version >= "3.7" and python_version < "4.0"
+crcmod==1.7 ; python_version >= "3.7" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.7" and python_version < "4.0"
+pycryptodome==3.16.0 ; python_version >= "3.7" and python_version < "4.0"
+pytz==2022.6 ; python_version >= "3.7" and python_version < "4.0"
+requests==2.27.1 ; python_version >= "3.7" and python_version < "4.0"
+retrying==1.3.4 ; python_version >= "3.7" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.7" and python_version < "4.0"
+tencentcloud-sdk-python==3.0.792 ; python_version >= "3.7" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.7" and python_version < "4.0"
+xmltodict==0.13.0 ; python_version >= "3.7" and python_version < "4.0"
