--- a/tools/c7n_azure/requirements.txt
+++ b/tools/c7n_azure/requirements.txt
@@ -29,7 +29,8 @@ azure-mgmt-cosmosdb==6.4.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-costmanagement==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-databricks==1.0.0b1 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-datafactory==1.1.0 ; python_version >= "3.7" and python_version < "4.0"
-azure-mgmt-datalake-store==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-mgmt-datalake-nspkg==3.0.1 ; python_version >= "3.7" and python_version < "4.0"
+azure-mgmt-datalake-store==0.5.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-dns==8.0.0b1 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-eventgrid==8.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-eventhub==8.0.0 ; python_version >= "3.7" and python_version < "4.0"
@@ -42,6 +43,7 @@ azure-mgmt-managementgroups==1.0.0b1 ; python_version >= "3.7" and python_versio
 azure-mgmt-monitor==2.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-msi==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-network==17.1.0 ; python_version >= "3.7" and python_version < "4.0"
+azure-mgmt-nspkg==3.0.2 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-policyinsights==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-rdbms==8.1.0 ; python_version >= "3.7" and python_version < "4.0"
 azure-mgmt-redis==12.0.0 ; python_version >= "3.7" and python_version < "4.0"
