--- a/tools/c7n_gcp/pyproject.toml
+++ b/tools/c7n_gcp/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 python = "^3.7"
 retrying = "^1.3.3"
 google-api-python-client = "^2.0"
+google-api-core = "2.10.2"
 google-cloud-logging = "^3.2"
 google-auth = "^2.1.0"
 ratelimiter = "^1.2.0"
