--- a/tools/c7n_gcp/pyproject.toml
+++ b/tools/c7n_gcp/pyproject.toml
@@ -18,7 +18,9 @@ classifiers = [
 python = "^3.7"
 retrying = "^1.3.3"
 google-api-python-client = "^2.0"
+# pin these for now
 google-api-core = "2.10.2"
+grpcio = "1.49.1"
 google-cloud-logging = "^3.2"
 google-auth = "^2.1.0"
 ratelimiter = "^1.2.0"
