--- a/tools/c7n_azure/pyproject.toml
+++ b/tools/c7n_azure/pyproject.toml
@@ -56,7 +56,8 @@ azure-cosmosdb-table = "^1.0.6"
 applicationinsights = "^0.11.9"
 apscheduler = "^3.6.3"
 distlib = "^0.3.0"
-requests = "^2.22.0"
+# pin for cos-python-sdk-v5
+requests = "2.27.1"
 PyJWT = ">=1.7.1,<3.0.0"
 adal = "^1.2.6"
 
