--- a/tools/c7n_policystream/pyproject.toml
+++ b/tools/c7n_policystream/pyproject.toml
@@ -21,7 +21,8 @@ c7n-policystream = 'policystream:cli'
 [tool.poetry.dependencies]
 python = "^3.7"
 click = "^8.0"
-requests = "^2.22.0"
+# pin for cos-python-sdk-v5
+requests = "2.27.1"
 pyyaml = ">=5.4.0"
 pygit2 = "~1.9"
 boto3 = "^1.12.0"
